fixed spacing in search bar:

--- a/frontend/src/components/Search/Search.css
+++ b/frontend/src/components/Search/Search.css
@@ -38,7 +38,7 @@
 
 #search-button {
   position: relative;
-  right: 14%;
+  right: 13%;
   border-radius: 50%;
   height: 35px;
   width: 35px;
